font and svg size fix on smaller screens

--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -29,7 +29,6 @@
 
 .question-list {
     list-style: none;
-    font-size: 1.4rem;
     padding: 0;
     margin: 0;
 
@@ -59,6 +58,7 @@
 }
 
 .question-button {
+    font-size: 1.125rem;
     padding: 1.5rem;
     display: flex;
     flex-direction: row;
@@ -100,8 +100,8 @@
 }
 
 .question-svg {
-    min-width: 1.5rem;
-    min-height: 1.5rem;
+    width: 1rem;
+    height: 1rem;
 }
 
 .question-svg-original{
@@ -110,6 +110,18 @@
 
 .question-svg-rotate {
     transform: rotate(-45deg);  
+}
+
+
+@media (min-width: 35em) {
+    .question-button {
+        font-size: 1.4rem;
+    }
+
+    .question-svg {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
 }
 
 
@@ -128,7 +140,7 @@
         font-size: 2.8rem;
     }
 
-    .question-list {
+    .question-button {
         font-size: 1.5rem;    
     }
 }
